objects/sf4twitter__Twitter_Followers__c.object
<CustomObject>
    <fields>
        <fullName>sf4twitter__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Followed By</relationshipLabel>
        <relationshipName>Twitter_Followers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Followed By</relationshipLabel>
        <relationshipName>Twitter_Followers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Twitter Account</label>
        <referenceTo>sf4twitter__Twitter_Account__c</referenceTo>
        <relationshipLabel>Following</relationshipLabel>
        <relationshipName>Twitter_Followers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Twitter Follower</label>
    <nameField>
        <displayFormat>TF-{0000000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Twitter Followers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>